logo and header positioned fixed to stay put when scrolling on tablet and mobile

--- a/src/App.css
+++ b/src/App.css
@@ -409,12 +409,19 @@
 }
 
 .logo {
-   margin-right: 0px;
+  position: fixed;
+  margin-left: -260px;
+  margin-top: -15px;
+}
+
+.nav-and-menu {
+  position: fixed;
+  margin-top: 30px;
 }
 
 .development, .design {
   width: 100%;
-  height: 50vh;
+  height: 100vh;
 }
 
 .design-content {
